Add event form and some minor corrections

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -180,7 +180,16 @@ Minutes=minutes
 Events.notFound = No events found
 Events = Events
 CreateNewEvent.button = Create new event
+CreateNewEvent.title = Create new event
 
 date.format={0} {1} {2}
 
 SaveChanges = Save Changes
+
+chooseDate = Choose a date
+
+Duration=Duration
+
+Creating.your.event=Creating your event
+
+Event.created.successfully= Event created successfully!
