--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -179,7 +179,16 @@ Events.notFound = No se encontraron eventos
 Events = Eventos
 
 CreateNewEvent.button = Crear nuevo evento
+CreateNewEvent.title = Crear nuevo evento
 
 date.format={0} de {1} de {2}
 
 SaveChanges = Guardar Cambios
+
+chooseDate = Elige una fecha
+
+Duration=Duración
+
+Creating.your.event=Creando tu evento
+
+Event.created.successfully= ¡Evento creada exitosamente!
