--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -196,9 +196,18 @@ Minutes=minutes
 Events.notFound = No events found
 Events = Events
 CreateNewEvent.button = Create new event
+CreateNewEvent.title = Create new event
 
 date.format={0} {1} {2}
 
 SaveChanges = Save Changes
 
 Reservations = Reservations
+
+chooseDate = Choose a date
+
+Duration=Duration
+
+Creating.your.event=Creating your event
+
+Event.created.successfully= Event created successfully!
