Restructure admin interface

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -259,3 +259,5 @@ CreateAnnouncement = Announce
 Requests = Requests
 
 ChangeImage = Change Image
+Calendar = Calendar
+Create.an.announcement = Create an announcement
