--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -256,3 +256,7 @@ Duration=Duration
 Creating.your.event=Creating your event
 
 Event.created.successfully= Event created successfully!
+
+Calendar = Calendar
+Create.an.announcement = Create an announcement
+CreateNewEvent.tooltip = Create new event
