--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -259,3 +259,5 @@ Duration=Duración
 Creating.your.event=Creando tu evento
 
 Event.created.successfully= ¡Evento creada exitosamente!
+Calendar = Calendario
+Create.an.announcement = Crear un anuncio
