Dynamic calendar date, ubiquitous calendar

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -258,4 +258,4 @@ Duration=Duración
 
 Creating.your.event=Creando tu evento
 
-Event.created.successfully= ¡Evento creada exitosamente!
+Event.created.successfully= ¡Evento creado exitosamente!
