Allow admin deletion of amenities/resources
Addition of buttons to easily delete amenities or resources

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -232,13 +232,13 @@ Add = Add
 First.name = First name
 Password = Password
 Identification = Identification
-CreateContact = Create Contact
+CreateContact = Add Contact
 ContactName = Contact Name
 ContactAddress = Contact Address
 ContactPhone = Contact Phone Number
 Contact.created.successfully = Contact created successfully!
 
-CreateResource = Create Resource
+CreateResource = Add Resource
 Title = Title
 Resource.created.successfully = Resource created successfully!
 AddResource = Add Resource
