--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -231,13 +231,13 @@ SaveChanges = Guardar Cambios
 
 Add = Agregar
 
-CreateContact = Crear Contacto
+CreateContact = Agregar Contacto
 ContactName = Nombre de Contacto
 ContactAddress = Dirección de Contacto
 ContactPhone = Teléfono de Contacto
 Contact.created.successfully = ¡Contacto creado exitosamente!
 
-CreateResource = Crear Recurso
+CreateResource = Agregar Recurso
 Title = Título
 Resource.created.successfully = ¡Recurso creado exitosamente!
 AddResource = Agregar Recurso
