--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -237,13 +237,13 @@ Open = Open
 Close = Close
 Add = Add
 
-CreateContact = Create Contact
+CreateContact = Add Contact
 ContactName = Contact Name
 ContactAddress = Contact Address
 ContactPhone = Contact Phone Number
 Contact.created.successfully = Contact created successfully!
 
-CreateResource = Create Resource
+CreateResource = Add Resource
 Title = Title
 Resource.created.successfully = Resource created successfully!
 AddResource = Add Resource
