Minor bug fixes

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -261,3 +261,5 @@ Requests = Requests
 ChangeImage = Change Image
 Calendar = Calendar
 Create.an.announcement = Create an announcement
+
+User.since = User since
