--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -260,3 +260,5 @@ Event.created.successfully= Event created successfully!
 Calendar = Calendar
 Create.an.announcement = Create an announcement
 CreateNewEvent.tooltip = Create new event
+
+User.since= User since
