--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -261,3 +261,5 @@ Creating.your.event=Creando tu evento
 Event.created.successfully= ¡Evento creado exitosamente!
 Calendar = Calendario
 Create.an.announcement = Crear un anuncio
+
+User.since = Usuario desde
