Display a users' reservations
Show a users' reservations in the amenities page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -263,3 +263,4 @@ Calendar = Calendar
 Create.an.announcement = Create an announcement
 
 User.since = User since
+MyReservations = My Reservations
