--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -262,3 +262,4 @@ Create.an.announcement = Create an announcement
 CreateNewEvent.tooltip = Create new event
 
 User.since= User since
+MyReservations = My Reservations
