Bug fixes and reservation feedback
Success/error message when creating a reservation and fixes in pages where calendar wasn't showing up

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -264,3 +264,4 @@ Create.an.announcement = Create an announcement
 
 User.since = User since
 MyReservations = My Reservations
+Reservation.created.successfully = Reservation created successfully!
