--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -264,3 +264,4 @@ Create.an.announcement = Crear un anuncio
 
 User.since = Usuario desde
 MyReservations = Mis Reservas
+Reservation.created.successfully = ¡Reserva creada exitosamente!
