--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -263,3 +263,4 @@ CreateNewEvent.tooltip = Create new event
 
 User.since= User since
 MyReservations = My Reservations
+Reservation.created.successfully = Reservation created successfully!
