Resolve various corrections

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -264,3 +264,4 @@ CreateNewEvent.tooltip = Create new event
 User.since= User since
 MyReservations = My Reservations
 Reservation.created.successfully = Reservation created successfully!
+Reservation.error = Error creating reservation, please check the times and try again.
