--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -265,3 +265,4 @@ Create.an.announcement = Crear un anuncio
 User.since = Usuario desde
 MyReservations = Mis Reservas
 Reservation.created.successfully = ¡Reserva creada exitosamente!
+Reservation.error = No pudimos crear la reserva. Por favor, verificá la fecha y horario seleccionados y volvé a intentarlo.
