--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -265,3 +265,4 @@ Create.an.announcement = Create an announcement
 User.since = User since
 MyReservations = My Reservations
 Reservation.created.successfully = Reservation created successfully!
+Reservation.error = Error creating reservation, please check the times and try again.
