Create a separate page for events and attendance
Separate page for each event in the calendar. Allows neighbors to sign up to attend events and see which neighbors have also signed up

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -265,3 +265,8 @@ User.since= User since
 MyReservations = My Reservations
 Reservation.created.successfully = Reservation created successfully!
 Reservation.error = Error creating reservation, please check the times and try again.
+
+Attend = I will attend
+Unattend = I will not attend
+Attendees = Neighbors who will attend
+NoAttendees = Be the first to sign up!
