--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -266,3 +266,8 @@ User.since = Usuario desde
 MyReservations = Mis Reservas
 Reservation.created.successfully = ¡Reserva creada exitosamente!
 Reservation.error = No pudimos crear la reserva. Por favor, verificá la fecha y horario seleccionados y volvé a intentarlo.
+
+Attend = Asistiré
+Unattend = No asistiré
+Attendees = Vecinos que Asistirán
+NoAttendees = Sé el primero en asistir!
