Add new like and unlike button option

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -271,3 +271,6 @@ Attend = Asistiré
 Unattend = No asistiré
 Attendees = Vecinos que Asistirán
 NoAttendees = Sé el primero en asistir!
+
+Like = Me gusta
+Unlike = No me gusta
