--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -270,3 +270,6 @@ Attend = I will attend
 Unattend = I will not attend
 Attendees = Neighbors who will attend
 NoAttendees = Be the first to sign up!
+
+Like = Like
+Unlike = Unlike
