Allow correct reservation of amenities
Dropdowns now solely display open times of the amenity and inform the neighbor of already reserved times for that date

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -270,3 +270,6 @@ Attend = I will attend
 Unattend = I will not attend
 Attendees = Neighbors who will attend
 NoAttendees = Be the first to sign up!
+SeeTimesButton = See times
+ChooseTime = Choose a time
+UnavailableTimes = Slots already reserved
