Set service profile box and widget

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -276,4 +276,14 @@ ChooseTime = Choose a time
 UnavailableTimes = Slots already reserved
 
 Like = Like
+Liked = Liked
+Likes = Likes
 Unlike = Unlike
+Services = Services
+Service = Service
+Businesses = Businesses
+Business = Business
+Edit.business.information = Edit business information
+Reviews = Reviews
+Leave.a.review = Leave a review
+CreateNewBusiness.button = Create new business
