--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -275,5 +275,15 @@ SeeTimesButton = Ver horarios
 ChooseTime = Elija horario
 UnavailableTimes = Horarios ya reservados
 
-Like = Me gusta
+Like =  Me gusta
+Liked = Me gusta
+Likes = Me gusta
 Unlike = No me gusta
+Services = Servicios
+Service =  Servicio
+Businesses = Negocios
+Business = Negocio
+Edit.business.information = Editar información del negocio
+Reviews = Reseñas
+Leave.a.review = Dejar una reseña
+CreateNewBusiness.button = Crear nuevo negocio
