Allow for users to leave a review on services

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -287,3 +287,4 @@ Edit.business.information = Edit business information
 Reviews = Reviews
 Leave.a.review = Leave a review
 CreateNewBusiness.button = Create new business
+Submit = Submit
