--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -287,3 +287,4 @@ Edit.business.information = Editar información del negocio
 Reviews = Reseñas
 Leave.a.review = Dejar una reseña
 CreateNewBusiness.button = Crear nuevo negocio
+Submit = Enviar
