Display real values for a worker's profile
Use of the corresponding services to retrieve a worker's data and display it on their profile. Services tab displays the neighborhoods' workers correctly and is linked to their profiles

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -284,7 +284,11 @@ Service = Service
 Businesses = Businesses
 Business = Business
 Edit.business.information = Edit business information
+Posts = Posts
+Rating = Rating
 Reviews = Reviews
 Leave.a.review = Leave a review
 CreateNewBusiness.button = Create new business
 Submit = Submit
+
+Loading. = Loading...
