--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -284,7 +284,11 @@ Service =  Servicio
 Businesses = Negocios
 Business = Negocio
 Edit.business.information = Editar información del negocio
+Posts = Publicaciones
+Rating = Puntaje
 Reviews = Reseñas
 Leave.a.review = Dejar una reseña
 CreateNewBusiness.button = Crear nuevo negocio
 Submit = Enviar
+
+Loading. = Cargando...
