Fix like count and add "clear all" tags button

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -290,5 +290,6 @@ Reviews = Reviews
 Leave.a.review = Leave a review
 CreateNewBusiness.button = Create new business
 Submit = Submit
+Clear.all.tags = Clear tags
 
 Loading. = Loading...
