--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -291,5 +291,7 @@ Reviews = Reviews
 Leave.a.review = Leave a review
 CreateNewBusiness.button = Create new business
 Submit = Submit
+Clear.all.tags = Clear tags
+
 
 Loading. = Loading...
