--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -290,5 +290,6 @@ Reviews = Reseñas
 Leave.a.review = Dejar una reseña
 CreateNewBusiness.button = Crear nuevo negocio
 Submit = Enviar
+Clear.all.tags = Quitar etiquetas
 
 Loading. = Cargando...
