Make use of the correct amenities booking
Refactored various submodules of WEB-INF and the controllers for better
accessibility

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -292,4 +292,19 @@ CreateNewBusiness.button = Create new business
 Submit = Submit
 Clear.all.tags = Clear tags
 
+Monday.abbr = Mon
+Tuesday.abbr = Tue
+Wednesday.abbr = Wed
+Thursday.abbr = Thu
+Friday.abbr = Fri
+Saturday.abbr = Sat
+Sunday.abbr = Sun
+Row = Row
+Column = Column
+Clear.all = Clear all
+Clear.weekend = Clear weekend
+Remember.message.1 = Remember, all 
+Remember.message.2 = checked boxes
+Remember.message.3 = are 1-hour shifts
+
 Loading. = Loading...
