--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -292,4 +292,19 @@ CreateNewBusiness.button = Crear nuevo negocio
 Submit = Enviar
 Clear.all.tags = Quitar etiquetas
 
+Monday.abbr = Lun
+Tuesday.abbr = Mar
+Wednesday.abbr = Mié
+Thursday.abbr = Jue
+Friday.abbr = Vie
+Saturday.abbr = Sáb
+Sunday.abbr = Dom
+Row = Fila
+Column = Columna
+Clear.all = Quitar todo
+Clear.weekend = Quitar fin de semana
+Remember.message.1 = Recuerde, todos los
+Remember.message.2 = bloques seleccionados
+Remember.message.3 = son de 1 hora de duración
+
 Loading. = Cargando...
