Allow administrators to reject neighbors
Administrators have the choice of rejecting a user or removing one from their neighborhood. Upon their next login, these users will be prompted to choose a neighborhood they want to join, and will have to wait till they are approved by that neighborhood's administration

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -130,6 +130,7 @@ Drop.files = Drop your files here
 Or = or
 Posts.notFound = No posts found
 Accept= Accept
+Reject = Reject
 Ignore = Ignore
 No.new.requests = No new requests
 No.verified.Users = No verified users yet
@@ -163,10 +164,15 @@ Cancel = Cancel
 Filter.by.tags = Filter by tags
 Successfully.signup = Congratulations! Your account has been successfully created!
 
-Welcome.frase.1=Hello, you're one step away from becoming a neighbor!
-Welcome.frase.2=We've already sent your request to the administration,
-Welcome.frase.3=we are configuring your account to provide you with the best experience.
-Welcome.frase.4=We will notify you when your account is ready.
+Welcome.phrase.1=Hello, you're one step away from becoming a neighbor!
+Welcome.phrase.2=We've already sent your request to the administration,
+Welcome.phrase.3=we are configuring your account to provide you with the best experience.
+Welcome.phrase.4=We will notify you when your account is ready.
+
+Rejected.phrase.1 = Hello, looks like you aren't associated with a neighborhood yet!
+Rejected.phrase.2 = Please select one of the following neighborhoods to continue.
+
+Request = Request
 
 Login.error.message = Sorry, we couldn't log you in. Please check your email and password and try again.
 
