--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -167,7 +167,8 @@ Welcome.frase.2=We've already sent your request to the administration,
 Welcome.frase.3=we are configuring your account to provide you with the best experience.
 Welcome.frase.4=We will notify you when your account is ready.
 
-Login.error.message = Sorry, we couldn't log you in. Please check your email and password and try again.
+Login.error.message.1 = Sorry, we couldn't log you in. 
+Login.error.message.2 = Please check your email and password and try again.
 
 CreateNewAmenity.button = Create Amenity
 Description = Description
@@ -307,5 +308,8 @@ Clear.weekend = Clear weekend
 Remember.message.1 = Remember, all 
 Remember.message.2 = checked boxes
 Remember.message.3 = are 1-hour shifts
-
+User.view = User view
+Hot = Hot
+Trending = Trending
+Clear = Clear
 Loading. = Loading...
