--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -168,8 +168,8 @@ Welcome.frase.2=Ya eviamos tu solicitud a la administración,
 Welcome.frase.3=estamos configurando tu cuenta para que tengas la mejor experiencia.
 Welcome.frase.4=Te avisaremos cuando esté lista.
 
-Login.error.message = Lo sentimos, no pudimos iniciar sesión. Por favor, verifica tu correo electrónico y contraseña y vuelve a intentarlo. 
-
+Login.error.message.1 = Lo sentimos, no pudimos iniciar sesión.
+Login.error.message.2 = Por favor, verificá tu email y contraseña e intentá nuevamente.
 
 CreateNewAmenity.button = Crear Amenidad
 Description = Descripción
@@ -306,5 +306,8 @@ Clear.weekend = Quitar fin de semana
 Remember.message.1 = Recuerde, todos los
 Remember.message.2 = bloques seleccionados
 Remember.message.3 = son de 1 hora de duración
-
+User.view = Vista de usuario
+Hot = Popular
+Trending = Tendencia
+Clear = Quitar
 Loading. = Cargando...
