Change API to endpoint and fix minor structures

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -317,4 +317,12 @@ User.view = User view
 Hot = Hot
 Trending = Trending
 Clear = Clear
+Creating= Creating
+Create = Create
+Adding = Adding
+Amenity = Amenity
+Creating.amenity = Creating amenity}
+Unavailable.times.message.1 = There are no available times for this amenity on
+Go.back = Go back
+
 Loading. = Loading...
