--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -318,4 +318,11 @@ User.view = User view
 Hot = Hot
 Trending = Trending
 Clear = Clear
+Creating= Creating
+Create = Create
+Adding = Adding
+Amenity = Amenity
+Creating.amenity = Creating amenity
+Go.back = Go back
+
 Loading. = Loading...
