--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -316,4 +316,11 @@ User.view = Vista de usuario
 Hot = Popular
 Trending = Tendencia
 Clear = Quitar
+Creating= Creando
+Create = Crear
+Adding = Agregando
+Amenity = Amenidad
+Creating.amenity = Creando amenidad
+Go.back = Volver
+
 Loading. = Cargando...
