Advance in events and comments
Clean up event form, display start time and end time, fix special characters issue present in comments.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -327,3 +327,5 @@ Unavailable.times.message.1 = There are no available times for this amenity on
 Go.back = Go back
 
 Loading. = Loading...
+
+Time = Time
