Allow a worker to signup and send admin emails
Allows a worker to sign up using our landing page, and sends the administrator of a neighborhood an email when a user creates an account associated with their neighborhood or when a worker tries to associate with their neighborhood (basically users waiting to be verified by the admin)

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -315,3 +315,6 @@ Remember.message.2 = checked boxes
 Remember.message.3 = are 1-hour shifts
 
 Loading. = Loading...
+Worker.signup.question = Are you a worker?
+Signup.here = Signup here
+Business.name = Business name
