--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -314,3 +314,6 @@ Remember.message.2 = bloques seleccionados
 Remember.message.3 = son de 1 hora de duración
 
 Loading. = Cargando...
+Worker.signup.question = Eres un trabajador?
+Signup.here = Registrarse aquí
+Business.name = Nombre del negocio
