Fix login bug and order signup forms

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -325,6 +325,7 @@ Amenity = Amenity
 Creating.amenity = Creating amenity}
 Unavailable.times.message.1 = There are no available times for this amenity on
 Go.back = Go back
+Available.times = Available times
 
 Loading. = Loading...
 Worker.signup.question = Are you a worker?
