--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -325,6 +325,7 @@ Adding = Adding
 Amenity = Amenity
 Creating.amenity = Creating amenity
 Go.back = Go back
+Available.times = Available times
 
 Loading. = Loading...
 
