--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -323,6 +323,7 @@ Adding = Agregando
 Amenity = Amenidad
 Creating.amenity = Creando amenidad
 Go.back = Volver
+Available.times = Horarios disponibles
 
 Loading. = Cargando...
 Worker.signup.question = Eres un trabajador?
