Fix signup and login errors and displays

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -333,3 +333,15 @@ Time = Time
 Worker.signup.question = Are you a worker?
 Signup.here = Signup here
 Business.name = Business name
+
+
+
+
+Plumber = Plumber
+Electrician = Electrician
+Gardener = Gardener
+Pool_maintenance = Pool Maintenance
+Carpenter = Carpenter
+
+Selected = Selected
+Select.profession = Select profession/s
