--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -331,3 +331,13 @@ Signup.here = Registrarse aquí
 Business.name = Nombre del negocio
 
 Time = Hora
+
+
+Plumber = Plomero
+Electrician = Electricista
+Gardener = Jardinero
+Pool_maintenance = Mantenimiento de Piscina
+Carpenter = Carpintero
+
+Selected = Seleccionado
+Select.profession = Seleccionar profesión/es
