--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -357,3 +357,13 @@ NotBlank.workerSignupForm.address = Address field is required
 NotBlank.workerSignupForm.businessName = Business Name field is required
 
 Time = Time
+
+
+Plumber = Plumber
+Electrician = Electrician
+Gardener = Gardener
+Pool_maintenance = Pool Maintenance
+Carpenter = Carpenter
+
+Selected = Selected
+Select.profession = Select profession/s
