Connect form with new field for time insertion

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -367,3 +367,6 @@ Carpenter = Carpenter
 
 Selected = Selected
 Select.profession = Select profession/s
+
+Time.start = Start time
+Time.end = End time
