--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -345,3 +345,6 @@ Carpenter = Carpenter
 
 Selected = Selected
 Select.profession = Select profession/s
+
+Time.start = Start time
+Time.end = End time
