--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -341,3 +341,6 @@ Carpenter = Carpintero
 
 Selected = Seleccionado
 Select.profession = Seleccionar profesión/es
+
+Time.start = Tiempo de inicio
+Time.end = Tiempo de fin
