Add mock example for worker profile edit popup

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -224,7 +224,7 @@ CreateNewEvent.title = Create new event
 
 date.format={0} {1} {2}
 
-SaveChanges = Save Changes
+SaveChanges = Save changes
 
 Reservations = Reservations
 
@@ -367,3 +367,6 @@ Carpenter = Carpenter
 
 Selected = Selected
 Select.profession = Select profession/s
+Edit = Edit
+Background.image = Background image
+Profile.picture = Profile picture
