--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -223,7 +223,7 @@ CreateNewEvent.title = Create new event
 
 date.format={0} {1} {2}
 
-SaveChanges = Save Changes
+SaveChanges = Save changes
 
 Reservations = Reservations
 MakeReservation = Make a Reservation
@@ -345,3 +345,4 @@ Carpenter = Carpenter
 
 Selected = Selected
 Select.profession = Select profession/s
+Edit = Edit
