--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -234,7 +234,7 @@ CreateNewEvent.title = Crear nuevo evento
 
 date.format={0} de {1} de {2}
 
-SaveChanges = Guardar Cambios
+SaveChanges = Guardar cambios
 
 Add = Agregar
 
@@ -341,3 +341,5 @@ Carpenter = Carpintero
 
 Selected = Seleccionado
 Select.profession = Seleccionar profesión/es
+
+Edit = Editar
