Allow a worker to edit their profile
Worker can edit their worker-associated info such as business name, phone number, address, bio, and background picture

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -353,8 +353,15 @@ Size.workerSignupForm.w_identification = Identification must be between 1-9 numb
 NotBlank.workerSignupForm.w_identification = Identification field is required
 
 NotBlank.workerSignupForm.phoneNumber = Phone Number field is required
+Size.workerSignupForm.phoneNumber = Must be less than 64 characters
+
+Pattern.workerSignupForm.address = The address must only contain letters, numbers and hyphens
 NotBlank.workerSignupForm.address = Address field is required
+Size.workerSignupForm.address = Must be less than 128 characters
+
+Pattern.workerSignupForm.businessName = The business name must only contain letters, numbers and hyphens
 NotBlank.workerSignupForm.businessName = Business Name field is required
+Size.workerSignupForm.businessName = Must be less than 128 characters
 
 Time = Time
 
@@ -373,3 +380,4 @@ Time.end = End time
 Edit = Edit
 Background.image = Background image
 Profile.picture = Profile picture
+EditProfile = Edit profile
