--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -330,6 +330,37 @@ Worker.signup.question = Eres un trabajador?
 Signup.here = Registrarse aquí
 Business.name = Nombre del negocio
 
+Pattern.workerSignupForm.w_name = Nombre solo debe contener letras
+NotBlank.workerSignupForm.w_name = Nombre requerido
+Size.workerSignupForm.w_name = Debe contener menos de 100 caracteres
+
+Pattern.workerSignupForm.w_surname = Apellido solo debe contener letras
+NotBlank.workerSignupForm.w_surname = Apellido requerido
+Size.workerSignupForm.w_surname = Debe contener menos de 100 caracteres
+
+NotBlank.workerSignupForm.w_mail = Email requerido
+Size.workerSignupForm.w_mail = Debe contener menos de 100 caracteres
+Email.workerSignupForm.w_mail = Debe ser un email válido
+
+NotBlank.workerSignupForm.w_password = Contraseña requerida
+Size.workerSignupForm.w_password = Debe contener menos de 50 caracteres
+Pattern.workerSignupForm.w_password = Formato de contraseña inválido
+
+Pattern.workerSignupForm.w_identification = Identificación solo debe contener números
+Size.workerSignupForm.w_identification = Identificación debe contener entre 1 y 9 caracteres
+NotBlank.workerSignupForm.w_identification = Identificacion requerida
+
+NotBlank.workerSignupForm.phoneNumber = Número de teléfono requerido
+Size.workerSignupForm.phoneNumber = Debe contener menos de 64 caracteres
+
+Pattern.workerSignupForm.address = Dirección solo debe contener letras, números y guiones
+NotBlank.workerSignupForm.address = Dirección requerida
+Size.workerSignupForm.address = Debe contener menos de 128 caracteres
+
+Pattern.workerSignupForm.businessName = Nombre solo debe contener letras, números y guiones
+NotBlank.workerSignupForm.businessName = Nombre de empresa requerida
+Size.workerSignupForm.businessName = Debe contener menos de 128 caracteres
+
 Time = Hora
 
 
@@ -346,3 +377,4 @@ Edit = Editar
 
 Time.start = Tiempo de inicio
 Time.end = Tiempo de fin
+EditProfile = Editar Perfil
