--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -334,7 +334,36 @@ Worker.signup.question = Are you a worker?
 Signup.here = Signup here
 Business.name = Business name
 
+Pattern.workerSignupForm.w_name = The name must only contain letters
+NotBlank.workerSignupForm.w_name = Name field is required
+Size.workerSignupForm.w_name = Must be less than 100 characters
 
+Pattern.workerSignupForm.w_surname = The surname must only contain letters
+NotBlank.workerSignupForm.w_surname = Surname field is required
+Size.workerSignupForm.w_surname = Must be less than 100 characters
+
+NotBlank.workerSignupForm.w_mail = Email field is required
+Size.workerSignupForm.w_mail = Must be less than 100 characters
+Email.workerSignupForm.w_mail = Must be a valid email address
+
+NotBlank.workerSignupForm.w_password = Password field is required
+Size.workerSignupForm.w_password = Must be less than 50 characters
+Pattern.workerSignupForm.w_password = Invalid password format
+
+Pattern.workerSignupForm.w_identification = The identification must only contain numbers
+Size.workerSignupForm.w_identification = Identification must be between 1-9 numbers
+NotBlank.workerSignupForm.w_identification = Identification field is required
+
+NotBlank.workerSignupForm.phoneNumber = Phone Number field is required
+Size.workerSignupForm.phoneNumber = Must be less than 64 characters
+
+Pattern.workerSignupForm.address = The address must only contain letters, numbers and hyphens
+NotBlank.workerSignupForm.address = Address field is required
+Size.workerSignupForm.address = Must be less than 128 characters
+
+Pattern.workerSignupForm.businessName = The business name must only contain letters, numbers and hyphens
+NotBlank.workerSignupForm.businessName = Business Name field is required
+Size.workerSignupForm.businessName = Must be less than 128 characters
 
 
 Plumber = Plumber
@@ -349,3 +378,4 @@ Edit = Edit
 
 Time.start = Start time
 Time.end = End time
+EditProfile = Edit profile
