Fix amenities bug

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -322,10 +322,13 @@ Creating= Creating
 Create = Create
 Adding = Adding
 Amenity = Amenity
-Creating.amenity = Creating amenity}
-Unavailable.times.message.1 = There are no available times for this amenity on
+Creating.amenity = Creating amenity
+Unavailable.times.message.1 = There are no available times for the amenity
+Unavailable.times.message.2 = on the selected date
+Unavailable.times.message.3 = Make sure you have selected a date and time within the amenity's opening hours and try again.
 Go.back = Go back
 Available.times = Available times
+No.reservations = No reservations
 
 Loading. = Loading...
 Worker.signup.question = Are you a worker?
