--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -322,8 +322,13 @@ Create = Crear
 Adding = Agregando
 Amenity = Amenidad
 Creating.amenity = Creando amenidad
+Unavailable.times.message.1 = No hay horarios disponibles para
+Unavailable.times.message.2 = en la fecha
+Unavailable.times.message.3 = Asegúrese de elegir una fecha y horario disponibles para dicha amenidad e intente nuevamente.
 Go.back = Volver
 Available.times = Horarios disponibles
+No.reservations = No tiene reservas
+
 
 Loading. = Cargando...
 Worker.signup.question = Eres un trabajador?
