Allow a user to leave reviews
Review form provided in a worker's profile to allow users to leave a rating and review for that worker

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -82,6 +82,12 @@ Size.contactForm.contactAddress=Must be less than 64 characters
 NotBlank.contactForm.contactPhone=Phone field is required
 Size.contactForm.contactPhone=Must be less than 20 characters
 
+NotNull.reviewForm.rating = Rating field is required
+Range.reviewForm.rating = Rating must be between 1 and 5
+
+NotBlank.reviewForm.review = Review field is required
+Size.reviewForm.review = Must be less than 255 characters
+
 
 posted = posted 
 neiboSlogan = Slogan
@@ -381,3 +387,7 @@ Edit = Edit
 Background.image = Background image
 Profile.picture = Profile picture
 EditProfile = Edit profile
+
+Review = Review
+CreateReview = Leave a Review
+Send = Send
