--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -379,3 +379,6 @@ Edit = Edit
 Time.start = Start time
 Time.end = End time
 EditProfile = Edit profile
+Review = Review
+CreateReview = Leave a Review
+Send = Send
