--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -378,3 +378,6 @@ Edit = Editar
 Time.start = Tiempo de inicio
 Time.end = Tiempo de fin
 EditProfile = Editar Perfil
+Review = Reseña
+CreateReview = Dejar una Reseña
+Send = Enviar
