Remove unnecessary console logs and souts

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -227,10 +227,10 @@ SaveChanges = Save changes
 
 Reservations = Reservations
 MakeReservation = Make a Reservation
-SelectAmenity = Select an Amenity:
-ChooseDate = Choose a Date:
-StartTime = Start Time:
-EndTime = End Time:
+SelectAmenity = Select an Amenity
+ChooseDate = Choose a Date
+StartTime = Start Time
+EndTime = End Time
 Day = Day
 Open = Open
 Close = Close
