--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -242,10 +242,10 @@ Creating.your.event=Creating your event
 
 Event.created.successfully= Event created successfully!
 MakeReservation = Make a Reservation
-SelectAmenity = Select an Amenity:
-ChooseDate = Choose a Date:
-StartTime = Start Time:
-EndTime = End Time:
+SelectAmenity = Select an Amenity
+ChooseDate = Choose a Date
+StartTime = Start Time
+EndTime = End Time
 Day = Day
 Open = Open
 Close = Close
