--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -215,10 +215,10 @@ month.december = Diciembre
 Reserve = Reservar
 Reservations = Reservas
 MakeReservation = Crear una Reserva
-SelectAmenity = Seleccionar una Amenidad:
-ChooseDate = Elegir Fecha:
-StartTime = Hora de Inicio:
-EndTime = Hora de Fin:
+SelectAmenity = Seleccionar una Amenidad
+ChooseDate = Elegir Fecha
+StartTime = Hora de Inicio
+EndTime = Hora de Fin
 Day = Día
 Open = Apertura
 Close = Cierre
