Create worker view and neighborhoods tab
Creation of worker view where all they see is services, their profile, and a neighborhoods tab. In the neighborhoods tab they can see the neighborhoods they are already a part of and can apply to be in others

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -381,3 +381,7 @@ EditProfile = Editar Perfil
 Review = Reseña
 CreateReview = Dejar una Reseña
 Send = Enviar
+
+My.Neighborhoods = Mis Barrios
+No.new.neighborhoods = Ya eres parte de todos los barrios!
+No.associated.neighborhoods = No estás asociado a ningún barrio, seleccione un barrio arriba.
