Add star rating to workers reviews

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -392,6 +392,7 @@ Profile.picture = Profile picture
 EditProfile = Edit profile
 
 Review = Review
+Leave.a.review.message = Tell us about your experience with 
 CreateReview = Leave a Review
 Send = Send
 
