--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -385,6 +385,8 @@ Time.end = Tiempo de fin
 EditProfile = Editar Perfil
 Review = Reseña
 CreateReview = Dejar una Reseña
+Leave.a.review.message = Comparte tu experiencia con otros vecinos acerca de
+
 Send = Enviar
 
 My.Neighborhoods = Mis Barrios
