--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -385,6 +385,8 @@ Time.end = End time
 EditProfile = Edit profile
 Review = Review
 CreateReview = Leave a Review
+Leave.a.review.message = Tell us about your experience with 
+
 Send = Send
 
 My.Neighborhoods = My Neighborhoods
