Fixed neighborhood selection for workers view

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -392,3 +392,10 @@ Send = Send
 My.Neighborhoods = My Neighborhoods
 No.new.neighborhoods = You are already associated with every neighborhood!
 No.associated.neighborhoods = You are not associated with any neighborhood yet, use dropdown above to select one.
+
+Select.neighborhood = Select neighborhood/s
+Select.neighborhood.message.0 = Select the neighborhood/s you want to be associated with
+Select.neighborhood.message.1 = By adding neighborhoods, you will be included in the neighborhoods services list, and they will be able to see your profile.
+Join = Join
+Joined = Joined
+Join.neighborhoods = Join neighborhoods
