--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -392,3 +392,11 @@ Send = Enviar
 My.Neighborhoods = Mis Barrios
 No.new.neighborhoods = Ya eres parte de todos los barrios!
 No.associated.neighborhoods = No estás asociado a ningún barrio, seleccione un barrio arriba.
+
+Select.neighborhood = Seleccionar barrio/s
+Select.neighborhood.message.0 = Seleccione los barrios a los que desea unirse.
+Select.neighborhood.message.1 = Al agregar barrios, se incluirá en la lista de servicios de los barrios y podrán ver su perfil.
+
+Join = Unirse
+Joined = Unido
+Join.neighborhoods = Unirse a barrios
