Fix workers view

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -400,3 +400,5 @@ Select.neighborhood.message.1 = Al agregar barrios, se incluirá en la lista de 
 Join = Unirse
 Joined = Unido
 Join.neighborhoods = Unirse a barrios
+
+Reviews.notFound = No se encontraron reseñas
