Add pagination for services page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -406,3 +406,5 @@ Select.neighborhood.message.1 = By adding neighborhoods, you will be included in
 Join = Join
 Joined = Joined
 Join.neighborhoods = Join neighborhoods
+
+Workers.notFound = No workers found
