Format code and fix minor bugs

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -406,3 +406,7 @@ Select.neighborhood.message.1 = By adding neighborhoods, you will be included in
 Join = Join
 Joined = Joined
 Join.neighborhoods = Join neighborhoods
+
+400=Bad Request: The request is invalid or malformed.
+401=Unauthorized: You are not authorized to access this resource.
+404=Not Found: The requested page could not be found.
