--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -338,5 +338,6 @@ Workers.notFound=No workers found
 404=Not Found: The requested page could not be found.
 405=Method Not Allowed: The request method is not supported by the resource.
 500=Internal Server Error: The server encountered an unexpected condition that prevented it from fulfilling the request.
-
+Workers = Service Providers
+Worker = Service Provider
 
