--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -338,5 +338,6 @@ Workers.notFound=No se encontraron trabajadores
 405=Método no permitido: El método de solicitud no es compatible con el recurso.
 500=Error interno del servidor: El servidor encontró una condición inesperada que le impidió cumplir con la solicitud.
 
-
+Workers = Service Providers
+Worker = Service Provider
 
