--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -47,7 +47,7 @@ Pattern.signupForm.password=Invalid password format
 Pattern.signupForm.identification=The identification must only contain numbers
 Size.signupForm.identification=Identification must be between 1-9 numbers
 NotBlank.signupForm.identification=Identification field is required
-NotBlank.amenityForm.name=Name field is required
+NotBlank.amenityForm.name=Name field is requiredw
 Size.amenityForm.name=Name must be less than 100 characters
 Pattern.amenityForm.name=Name must only contain alphanumerical characters
 NotBlank.amenityForm.description=Description field is required
@@ -340,3 +340,5 @@ Join.neighborhoods=Join neighborhoods
 404=Not Found: The requested page could not be found.
 Reviews.notFound=No reviews found
 Workers.notFound=No workers found
+Workers = Service Providers
+Worker = Service Provider
