Improve worker views

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -339,6 +339,8 @@ Join.neighborhoods=Join neighborhoods
 401=Unauthorized: You are not authorized to access this resource.
 404=Not Found: The requested page could not be found.
 Reviews.notFound=No reviews found
-Workers.notFound=No workers found
+Workers.notFound=No service providers found
 Workers = Service Providers
 Worker = Service Provider
+Information.not.found = No information found
+Amenities.not.found = No amenities found
