--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -330,7 +330,7 @@ Join=Unirse
 Joined=Unido
 Join.neighborhoods=Unirse a barrios
 Reviews.notFound=No se encontraron reseñas
-Workers.notFound=No se encontraron trabajadores
+Workers.notFound=No se encontraron proveedores de servicios
 400=Mal pedido: La solicitud es inválida o está mal formada.
 401=No autorizado: No estás autorizado para acceder a este recurso.
 403=Prohibido: No tienes permiso para acceder a este recurso.
@@ -338,6 +338,8 @@ Workers.notFound=No se encontraron trabajadores
 405=Método no permitido: El método de solicitud no es compatible con el recurso.
 500=Error interno del servidor: El servidor encontró una condición inesperada que le impidió cumplir con la solicitud.
 
-Workers = Service Providers
-Worker = Service Provider
+Workers = Proveedores de servicios
+Worker = Proveedor de servicios
 
+Information.not.found = No se encontró información
+Amenities.not.found = No se econtraron amenidades
