--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -331,7 +331,7 @@ Join=Join
 Joined=Joined
 Join.neighborhoods=Join neighborhoods
 Reviews.notFound=No reviews found
-Workers.notFound=No workers found
+Workers.notFound=No service providers found
 400=Bad Request: The request is invalid or malformed.
 401=Unauthorized: You are not authorized to access this resource.
 403=Forbidden: You don't have permission to access this resource.
@@ -340,4 +340,7 @@ Workers.notFound=No workers found
 500=Internal Server Error: The server encountered an unexpected condition that prevented it from fulfilling the request.
 Workers = Service Providers
 Worker = Service Provider
+
+Information.not.found = No information found
+Amenities.not.found = No amenities found
 
