Fixed like api and made posting channel dependant
Fixed context path like api failure and added some features for better
understanding of posting mechanics

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -71,6 +71,7 @@ Contacts=Contacts
 CreateNewPost.tooltip=Create new post 
 CreateNewPost.button=Create new post
 CreatePost.title=Create a post
+CreateComplaint.title=Create a complaint
 CreateNewAdminPost.tooltip=Create new admin post
 CreateNewAdminPost.button=Create new admin post
 CreateAdminPost.title=Create an admin post
@@ -344,3 +345,5 @@ Workers = Service Providers
 Worker = Service Provider
 Information.not.found = No information found
 Amenities.not.found = No amenities found
+Create.new.complaint = Create new complaint
+Remove = Remove
