--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -67,6 +67,7 @@ Contacts=Contactos
 CreateNewPost.tooltip=Crear nueva publicación
 CreateNewPost.button=Crear nueva publicación
 CreatePost.title=Crear una publicación
+CreateComplaint.title= Crear una queja
 CreateNewAdminPost.tooltip=Crear una nueva publicación de administrador
 CreateNewAdminPost.button=Crear una nueva publicación de administrador
 CreateAdminPost.title=Crear una nueva publicación de administrador
@@ -343,3 +344,6 @@ Worker = Proveedor de servicios
 
 Information.not.found = No se encontró información
 Amenities.not.found = No se econtraron amenidades
+
+Create.new.complaint = Crear nueva queja
+Remove = Eliminar
