Validate images and dropdowns
Image size validation now being done, as well as validation for neighborhood and language selection in signup menu dropdowns

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -59,6 +59,11 @@ Size.contactForm.contactName=Must be less than 64 characters
 Size.contactForm.contactAddress=Must be less than 64 characters
 NotBlank.contactForm.contactPhone=Phone field is required
 Size.contactForm.contactPhone=Must be less than 20 characters
+NeighborhoodConstraint.signupForm.neighborhoodId=Invalid Neighborhood
+NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Invalid Neighborhood
+NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Invalid Neighborhood
+LanguageConstraint.signupForm.language=Invalid Language
+LanguageConstraint.workerSignupForm.w_language=Invalid Language
 posted=posted 
 neiboSlogan=Slogan
 Announcements=Announcements
