--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -59,6 +59,11 @@ Size.contactForm.contactName=Debe contener menos de 64 caracteres
 Size.contactForm.contactAddress=Debe contener menos de 64 caracteres
 NotBlank.contactForm.contactPhone=Número de teléfono requerido
 Size.contactForm.contactPhone=Debe contener menos de 20 caracteres
+NeighborhoodConstraint.signupForm.neighborhoodId=Barrrio inválido
+NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Barrrio inválido
+NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Barrrio inválido
+LanguageConstraint.signupForm.language=Idioma inválido
+LanguageConstraint.workerSignupForm.w_language=Idioma inválido
 posted=publicado
 neiboSlogan=Eslógan
 Announcements=Anuncios
