--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -63,6 +63,12 @@ NotNull.reviewForm.rating=Rating field is required
 Range.reviewForm.rating=Rating must be between 1 and 5
 NotBlank.reviewForm.review=Review field is required
 Size.reviewForm.review=Must be less than 255 characters
+NeighborhoodConstraint.signupForm.neighborhoodId=Invalid Neighborhood
+NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Invalid Neighborhood
+NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Invalid Neighborhood
+LanguageConstraint.signupForm.language=Invalid Language
+LanguageConstraint.workerSignupForm.w_language=Invalid Language
+
 posted=posted 
 neiboSlogan=Slogan
 Announcements=Announcements
