Save changes on buttons and tag selection by post

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -353,3 +353,4 @@ Information.not.found = No information found
 Amenities.not.found = No amenities found
 Create.new.complaint = Create new complaint
 Remove = Remove
+Newest = Newest
