Allow for filtering by newest posts

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -353,3 +353,4 @@ Amenities.not.found = No amenities found
 Create.new.complaint = Create new complaint
 Remove = Remove
 Newest = Newest
+Resources.not.found = There are no resources yet
