--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -353,3 +353,4 @@ Amenities.not.found = No se econtraron amenidades
 Create.new.complaint = Crear nueva queja
 Remove = Eliminar
 Newest = Más nuevo
+Resources.not.found = Aún no hay recursos
